--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 	<meta name="apple-mobile-web-app-capable" content="yes" />
 	<meta name="renderer" content="webkit">
 	<link rel="shortcut icon" href="favicon.ico" /> 
-	<title>欢迎访问吴昊博客导航页</title>
-	<meta name="keywords" content="吴昊博客导航页,吴昊,吴昊博客,吴昊先生的博客,吴昊linux,吴昊运维" />
-	<meta name="description" content="欢迎访问吴昊博客导航页，博主拥有多年Linux运维从业经验，专注于Linux平台的系统维护以及软件应用。" />
+	<title>欢迎访问神秘的小王博客导航页</title>
+	<meta name="keywords" content="神秘的小王博客导航页,神秘的小王" />
+	<meta name="description" content="欢迎访问博客导航页" />
 	<link rel="stylesheet" id="fontawesome-style-css" href="1.css" type='text/css' media='all' />
 		
 </head>
@@ -16,26 +16,26 @@
 <body ondragstart="window.event.returnValue=false" oncontextmenu="window.event.returnValue=false" onselectstart="event.returnValue=false">
 <div id="container">
 	<div>
-	<a href="/"><img src="rewrite_now.png" alt="吴昊博客" ></a>
+	<a href="/"><img src="top.png" alt="博客" ></a>
 	<br/>
 	<br/>
-	  <h1 id="h1">或許你沒有辦法改變世界</h1>	
-        <h2 id="h2">但是你可以改變現在</h2>
+	  <h1 id="h1">博观而约取</h1>	
+        <h2 id="h2">厚积而薄发</h2>
 		<br/>
 		<br/>
 		<h3 id="h3">
-		<a href="https://blog.whsir.com/" target="_blank" >博客首页</a> -
-		<a href="http://tools.whsir.com/"target="_blank" >在线工具</a> -
-		<a href="https://xss.130.cloud/"target="_blank" >XSS平台</a> -
-		<a href="http://www.wlnmp.com/"target="_blank" >wlnmp一键包</a>
+		<a href="https://www.smdxw.top/" target="_blank" >博客主站</a> -
+		<a href="https://smdxw.top/"target="_blank" >博客副站</a> -
+		<a href="http://qijishow.com/"target="_blank" >奇迹秀</a> -
+		<a href="http://kedou.workerman.net/"target="_blank" >蝌蚪聊天室</a>
 		</h3>
 		<br/>
-		<span>欢迎访问吴昊博客导航页</span>
+		<span>欢迎访问神秘的小王博客导航页</span>
 		<br/>
 		<p>
 		<br/>
 		<br/>
-		<a href="http://www.beian.miit.gov.cn" target="_blank" rel="nofollow">备案xxxxx</a>
+		<a href="https://github.com/whsir/BridgeDeck" target="_blank" rel="nofollow">Theme by BridgeDeck</a>
 		</p>
 		<br/>
 	</div>
