--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 	<a href="/"><img src="top.png" alt="博客" ></a>
 	<br/>
 	<br/>
-	  <h1 id="h1">博观而约取</h1>	
-        <h2 id="h2">厚积而薄发</h2>
+	  <h1 id="h1">You cannot improve your past, but you can improve your future. Once time is wasted, life is wasted.</h1>	
+        <h2 id="h2">你不能改变你的过去，但你可以让你的未来变得更美好。一旦时间浪费了，生命就浪费了。</h2>
 		<br/>
 		<br/>
 		<h3 id="h3">
