--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0" />
 	<meta name="apple-mobile-web-app-capable" content="yes" />
 	<meta name="renderer" content="webkit">
-	<link rel="shortcut icon" href="favicon.ico" /> 
+	<link rel="shortcut icon" href="favicon_1.ico" /> 
 	<title>欢迎访问神秘的小王博客导航页</title>
 	<meta name="keywords" content="神秘的小王博客导航页,神秘的小王" />
 	<meta name="description" content="欢迎访问博客导航页" />
