--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 		<a href="https://www.smdxw.top/" target="_blank" >博客主站</a> -
 		<a href="https://smdxw.top/"target="_blank" >博客副站</a> -
 		<a href="http://qijishow.com/"target="_blank" >奇迹秀</a> -
+		<a href="https://www.smdxw.xyz/"target="_blank" >我的网盘</a> -
 		<a href="http://kedou.workerman.net/"target="_blank" >蝌蚪聊天室</a>
 		</h3>
 		<br/>
