--- a/index.html
+++ b/index.html
@@ -27,9 +27,8 @@
 		<a href="https://www.smdxw.top/" target="_blank" >博客主站</a> -
 		<a href="https://smdxw.top/"target="_blank" >博客副站</a> -
 		<a href="http://qijishow.com/"target="_blank" >奇迹秀</a> -
-		<a href="https://www.smdxw.xyz/"target="_blank" >我的网盘</a> -
-		<a href="http://kedou.workerman.net/"target="_blank" >蝌蚪聊天室</a> -
-		<a href="https://gitmind.cn/"target="_blank" >免费在线思维导图</a>
+		<a href="http://nas.smdxw.top:6543/kod/"target="_blank" >我的网盘</a> -
+		<a href="http://nas.smdxw.top:6543/blog/"target="_blank" >我的博客</a>
 		</h3>
 		<br/>
 		<span>欢迎访问神秘的小王博客导航页</span>
